--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-    overflow-x: hidden;
+html {
+  scroll-behavior: smooth;
 }
 
-html::-webkit-scrollbar{
-    /* scroll-behavior: smooth; */
+body {
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #999;
+  border-radius: 4px;
 }
